# ros2_exams

ecn_2020/: CMakeLists.txt  control_node.cpp
ecn_2020/launch/: fleet_launch.py
ecn_2021/: CMakeLists.txt
ecn_2022/: CMakeLists.txt
ecn_2022/subject/: midwa_ds.tex
ecn_2023/ecn_2023/: CMakeLists.txt  package.xml
ecn_2023/ecn_2023/urdf/world/: world.xacro
ecn_2023/ecn_usv/: CMakeLists.txt
ecn_2024/: CMakeLists.txt  control_node.cpp  control_node.py  package.xml
ecn_2024/include/ecn_2024/: tracker.h
ecn_2024/launch/: config.rviz  simulation_launch.py
ecn_2024/src/: letter2path  tracker.py
ecn_2024/srv/: Letter.srv
ecn_2024/subject/: midwa_ds.tex
ecn_2025/: CMakeLists.txt  control_node.cpp  package.xml
ecn_2025/include/ecn_2025/: srv_sync.h
ecn_2025/launch/: both_launch.py  config.rviz  simulation_launch.py
ecn_2025/src/: ball.py  visual_servo.cpp
ecn_2025/subject/: midwa_ds.tex
